--- a/css/home.css
+++ b/css/home.css
@@ -56,7 +56,7 @@
     font-family: "Andale Mono", monospace;
     font-size: 10pt;
     display: inline-block;
-    width: 500px;
+    width: 800px;
     margin-top: 1.5%;
   }
   .page{
@@ -68,6 +68,9 @@
     cursor: pointer;
   }
   .ref:hover ~ .background .water{
+    filter:none;
+  }
+  .slider:hover ~ .background .water{
     filter:none;
   }
 
@@ -122,11 +125,21 @@
     overflow: hidden;
     background-image: linear-gradient(white, gainsboro);
     color: black;
-    transition: all 1s;
+    transition: all 1.5s;
     font-family: "Andale Mono", monospace;
     font-size: 10pt;
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .enlarged {
+    margin-top: 5%;
+  }
+
+  .slider{
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 2%;
   }
   
   .slider.close {
