--- a/css/home.css
+++ b/css/home.css
@@ -136,8 +136,13 @@
   }
 
   #igloo, #redsea, #covid{
-    width: 90%;
+    width: 100%;
     height: 100%;
+  }
+
+  .proj-container{
+    width: 90%;
+    height: 700px;
   }
 
   @media only screen{
@@ -149,5 +154,11 @@
     }
     .page{
       display: block;
+    }
+    .social{
+      top: -10%;
+    }
+    .proj-container{
+      height: 200px;
     }
   }
