--- a/css/home.css
+++ b/css/home.css
@@ -145,7 +145,7 @@
     height: 700px;
   }
 
-  @media only screen{
+  @media only screen and (max-width: 600px){
     .pages{
       display: block;
       width: 80%;
@@ -156,7 +156,7 @@
       display: block;
     }
     .social{
-      top: -10%;
+      top: -50%;
     }
     .proj-container{
       height: 200px;
